# ha-ultimate-mcp

./: .gitignore  BLUEPRINT.md  PLAYBOOK.md  README.md  TODO.md  architecture.md  repository.yaml
docs/: research-api-surface.md  research-existing-servers.md
server/: pyproject.toml
server/ultimate_mcp/: __init__.py  __main__.py  app.py  context.py  gateway.py  registry.py  spec.py  ws.py
server/ultimate_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/ultimate_mcp/fingerprint/: collect.py
server/ultimate_mcp/safety/: kernel.py  storage_editor.py
server/ultimate_mcp/tools/assist/: impl.py  manifest.py
server/ultimate_mcp/tools/dashboards/: impl.py  manifest.py
server/ultimate_mcp/tools/database/: impl.py  manifest.py
server/ultimate_mcp/tools/diagnostics/: impl.py  manifest.py
server/ultimate_mcp/tools/filesystem/: impl.py  manifest.py
server/ultimate_mcp/tools/hacs/: impl.py  manifest.py
server/ultimate_mcp/tools/media_camera/: impl.py  manifest.py
server/ultimate_mcp/tools/network/: impl.py  manifest.py
server/ultimate_mcp/tools/realtime/: impl.py  manifest.py
server/ultimate_mcp/tools/registries/: impl.py  manifest.py
server/ultimate_mcp/tools/stats_repair/: impl.py  manifest.py
server/ultimate_mcp/tools/storage/: impl.py  manifest.py
server/ultimate_mcp/tools/supervisor/: impl.py  manifest.py
server/ultimate_mcp/tools/zigbee/: impl.py  manifest.py
tests/: conftest.py  test_assist.py  test_dashboards.py  test_database.py  test_diagnostics.py  test_filesystem.py  test_gate_smoke.py  test_gate_units.py  (+13 more)
(+9 files in other folders)
