[project]
name = "ultimate-mcp"
version = "0.1.0"
description = "Ultimate MCP Server for Home Assistant - deep system-level toolset"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "websockets>=13.0",
    "pydantic>=2.7",
    "aiomqtt>=2.0",
    "orjson>=3.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5", "mypy>=1.10"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ultimate_mcp*"]

[tool.ruff]
line-length = 100
target-version = "py312"
